# qingyun-skills

./: .gitignore  README.md  catalog.yaml  mise.toml  pyproject.toml  uv-requirements.txt
scripts/: check-update.sh
skills/asr/: SKILL.md
skills/asr/agents/: openai.yaml
skills/asr/references/: aliyun-fun-asr.md
skills/asr/scripts/: transcribe.py
skills/baoyu-slide-deck/scripts/: package.json
skills/beautiful-mermaid/: SKILL.md
skills/beautiful-mermaid/agents/: openai.yaml
skills/beautiful-mermaid/scripts/: render.mjs
skills/drawio/: SKILL.md
skills/kami/: .gitignore  AGENTS.md  CHEATSHEET.md  CLAUDE.md  README.md  index-ja.html  index-ko.html  index-tw.html  index-zh.html  index.html  llms.txt
skills/kami/.agents/plugins/: marketplace.json
skills/kami/.claude-plugin/: marketplace.json
skills/kami/.github/workflows/: check.yml  release.yml
skills/kami/references/: design.md  mermaid-theme.json  resume-writing.md
skills/kami/scripts/: build_metadata.py  check-update.sh
skills/learn/: SKILL.md
skills/read/: SKILL.md
skills/restoration/: SKILL.md
skills/restoration/agents/: openai.yaml
skills/restoration/scripts/: extract_latest_imagegen_result.py
skills/threads/: SKILL.md
skills/threads/agents/: openai.yaml
skills/threads/evals/: evals.json
skills/threads/references/: prompt-patterns.md
skills/threads/scripts/: analyze_run_log.py
skills/unlimited-ocr/: SKILL.md
skills/unlimited-ocr/agents/: openai.yaml
skills/unlimited-ocr/scripts/: build_readable_markdown.py  run_unlimited_ocr.py
(+16 files in other folders)
